--- a/validation.html
+++ b/validation.html
@@ -15,7 +15,7 @@
       <h4>Students name</h4>
       <br>
       <label for="first-name">First-Name:</label>
-      <input type="text" value="last-name" placeholder="Enter your first-name" required>
+      <input type="text" value="first-name" placeholder="Enter your first-name" required>
 
 
       <label for="middle-name">Middle-Name:</label>
